--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="ROBOTS" content="ALL">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/animation.css">
     <title>Horiseon</title>
 </head>
 
