--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Horiseon</title>
 </head>
 <body>
+    <!-- Header -->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -29,7 +30,9 @@
             </ul>
         </div>
     </div>
+    <!-- Title -->
     <div class="hero"></div>
+    <!-- Content -->
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search engine optimization" />
@@ -53,6 +56,7 @@
             </p>
         </div>
     </div>
+    <!-- Benefits -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -76,6 +80,7 @@
             </p>
         </div>
     </div>
+    <!-- Footer -->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
