--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <!-- Title -->
     <div class="hero"></div>
-    <!-- Content -->
+    <!-- Main Content -->
     <main class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search engine optimization" />
@@ -56,7 +56,7 @@
             </p>
         </section>
     </main>
-    <!-- Benefits -->
+    <!-- Aside Content -->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
